--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,11 @@ jobs:
         # This assumes your book is in the root of your repository.
         # Just add a `cd` here if you need to change to another directory.
         mdbook build
+        # remove submodule because later github will checkout branch gh-pages to deploy. and it might not able to handle submodule
+        git submodule deinit -f src/VMDockerNotes && git submodule deinit -f src/spring-boot-multiple-datasource
+        rm -rf .git/modules/
+        git rm -f src/VMDockerNotes && git rm -f src/spring-boot-multiple-datasource
+        # original script form mdbook guide line
         git worktree add gh-pages
         git config user.name "Deploy from CI"
         git config user.email ""
