--- a/book.toml
+++ b/book.toml
@@ -1,5 +1,5 @@
 [book]
-title = "A Programmer Prepares"
+title = "程序員的自我修養 A Programmer Prepares"
 authors = []
 language = "zh-Hant"
 multilingual = false
