--- a/book.toml
+++ b/book.toml
@@ -4,3 +4,13 @@ authors = []
 language = "zh-Hant"
 multilingual = false
 src = "src"
+
+[preprocessor]
+
+[preprocessor.mermaid]
+command = "mdbook-mermaid"
+
+[output]
+
+[output.html]
+additional-js = ["mermaid.min.js", "mermaid-init.js"]
